# SLNG-task

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: model_router.py
tests/: test_model_router.py
